# Gebo

./: .gitignore  AI-TIMELINE-SYSTEM.md  CHANGELOG.md  GHOST_CLIPS_FIX.md  INFINITE_CANVAS.md  INSTANT_PREVIEW_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  PREVIEW_SYSTEM.md  QUICK_START_STREAMING.md  README.md  SEEK_BUTTONS_UPDATE.md  STREAMING_PREVIEW_DESIGN.md  STREAMING_PREVIEW_IMPLEMENTATION.md  TIMELINE_RULER_IMPROVEMENTS.md  UI_IMPROVEMENTS.md  eslint.config.js  example-project.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  test_json_extraction  test_json_extraction.rs
src-tauri/capabilities/: default.json
src-tauri/src/: ai_agent.rs  ffmpeg.rs  gemini_client.rs  longterm_storage.rs  main.rs  project_file.rs  streaming_encoder.rs  transcription.rs  video_analysis.rs  waveform.rs
src/components/: AdvancedTimeline.tsx  ApiKeyManager.tsx  Chat.tsx  ChatMessage.tsx  CommandDialog.tsx  DebugPanel.tsx  ErrorBoundary.tsx  ExportDialog.tsx  FormModal.tsx  LoadingScreen.tsx  Modal.tsx  Player.tsx  Sidebar.tsx  StreamingVideoPlayer.tsx  Toolbar.tsx  VariableInput.tsx  VideoTimeline.tsx  WaveformCanvas.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  textarea.tsx
src/hooks/: useFileHandling.ts  useProject.ts  useWaveformLogic.ts
src/lib/: aiAgent.ts  diagnostics.ts  ffmpeg.ts  longtermStorage.ts  projectFile.ts  projectManager.ts  songDownloader.ts  transcription.ts  videoAnalysis.ts  windowManager.ts
src/pages/Home/: Home.tsx
src/pages/Home/components/: recentProject.tsx
src/pages/Home/utils/: fileUtils.ts
src/pages/VideoEditor/: VideoEditor.tsx
src/pages/VideoEditor/components/: Chat.tsx  (+20 more)
src/stores/: projectFileStore.ts
(+18 files in other folders)
