[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4"
base64 = "0.22"
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking", "json", "stream", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
rand = "0.8"
lazy_static = "1.4"
tokio-tungstenite = "0.21"
futures-util = "0.3"
mime_guess = "2.0"
tokio-util = { version = "0.7", features = ["io"] }

